refactor: Added a description to the input

--- a/order.html
+++ b/order.html
@@ -215,27 +215,28 @@
       <h1 class="login-modal__title">Вход на сайт</h1>
       <label for="login-email">Логин</label>
       <div class="login-modal__email-block">
-      <input id="login-email" required type="email" placeholder="Введите почту">
-      <img src="./common/svg/Message-gray.svg" alt="">      
+        <input id="login-email" required type="email" placeholder="Введите почту">
+        <img src="./common/svg/Message-gray.svg" alt="">
       </div>
       <label for="login-pass">Пароль</label>
       <button class="login-modal__link-remind">Напомнить</button>
       <div class="login-modal__password-block">
-      <input id="login-pass" required type="password" placeholder="Введите пароль">
-      <img src="./common/svg/Eye.svg" alt="" class="show-pass">    
+        <input id="login-pass" required type="password" placeholder="Введите пароль">
+        <img src="./common/svg/Eye.svg" alt="" class="show-pass">
       </div>
       <div class="login-modal__btn-block">
-      <button class="main-btn login-modal__btn-submit" type="submit">Войти</button><a class="login-modal__link-register" href="./registration.html">Регистрация</a>
-    </div>
+        <button class="main-btn login-modal__btn-submit" type="submit">Войти</button><a
+          class="login-modal__link-register" href="./registration.html">Регистрация</a>
+      </div>
     </form>
-    
+
     <form class="remind-password__content" action="" onsubmit="return false">
       <button class="remind-password__btn-close">&#9587;</button>
       <h1 class="remind-password__title">Напомнить пароль</h1>
-      <label for="remind-pass-email" >Укажите вашу почту</label>
+      <label for="remind-pass-email">Укажите вашу почту</label>
       <div class="remind-password__email-block">
-      <input id="remind-pass-email" required type="email" placeholder="Введите почту">
-      <img src="./common/svg/Message-gray.svg" alt="">
+        <input id="remind-pass-email" required type="email" placeholder="Введите почту">
+        <img src="./common/svg/Message-gray.svg" alt="">
       </div>
       <div class="remind-password__btn-block">
         <button type="submit" class="main-btn remind-password__btn-submit">Отправить</button>
@@ -285,67 +286,71 @@
       </ul>
     </div>
     <div class="order-point">
-        <button class="order-point__btn-close">&#9587;</button>
-        <h1 class="order-point__title">Выбрать пункт заказа</h1>
-        <div class="order-point__container">
-            <ul class="order-point__list">
-                <li class="order-point__item">
-                    <span class="order-point__text">Россия, обл. Московская, р-н Мытищинский,
-                        г. Марфино, Зеленая, 2а5</span>
-                    <span class="order-point__text order__text--bold order-point__text--green">Доступно для самовывоза с 4 декабря</span>
-                    <p class="order-point__time">
-                        <span class="order-point__text order__text--bold">Режим работы</span>
-                        <span class="order-point__text">Пн-Пт 10:00-20:00,  сб-вс 10:00-18:00</span>
-                    </p>
-                    <div class="order-point__btn-block">
-                        <button class="main-btn order-point__btn-submit">ВЫБРАТЬ</button>
-                        <button class="order-point__btn-show-hide">Подробнее</button>
-                    </div>
-                </li>
-                <li class="order-point__item">
-                    <span class="order-point__text">Россия, обл. Московская, р-н Мытищинский,
-                        г. Марфино, Зеленая, 2а5</span>
-                    <span class="order-point__text order__text--bold order-point__text--green">Доступно для самовывоза с 4 декабря</span>
-                    <p class="order-point__time">
-                        <span class="order-point__text order__text--bold">Режим работы</span>
-                        <span class="order-point__text">Пн-Пт 10:00-20:00,  сб-вс 10:00-18:00</span>
-                    </p>
-                    <div class="order-point__btn-block">
-                        <button class="main-btn order-point__btn-submit">ВЫБРАТЬ</button>
-                        <button class="order-point__btn-show-hide">Подробнее</button>
-                    </div>
-                </li>
-                <li class="order-point__item">
-                    <span class="order-point__text">Россия, обл. Московская, р-н Мытищинский,
-                        г. Марфино, Зеленая, 2а5</span>
-                    <span class="order-point__text order__text--bold order-point__text--green">Доступно для самовывоза с 4 декабря</span>
-                    <p class="order-point__time">
-                        <span class="order-point__text order__text--bold">Режим работы</span>
-                        <span class="order-point__text">Пн-Пт 10:00-20:00,  сб-вс 10:00-18:00</span>
-                    </p>
-                    <div class="order-point__btn-block">
-                        <button class="main-btn order-point__btn-submit">ВЫБРАТЬ</button>
-                        <button class="order-point__btn-show-hide">Подробнее</button>
-                    </div>
-                </li>
-                <li class="order-point__item">
-                    <span class="order-point__text">Россия, обл. Московская, р-н Мытищинский,
-                        г. Марфино, Зеленая, 2а5</span>
-                    <span class="order-point__text order__text--bold order-point__text--green">Доступно для самовывоза с 4 декабря</span>
-                    <p class="order-point__time">
-                        <span class="order-point__text order__text--bold">Режим работы</span>
-                        <span class="order-point__text">Пн-Пт 10:00-20:00,  сб-вс 10:00-18:00</span>
-                    </p>
-                    <div class="order-point__btn-block">
-                        <button class="main-btn order-point__btn-submit">ВЫБРАТЬ</button>
-                        <button class="order-point__btn-show-hide">Подробнее</button>
-                    </div>
-                </li>
-            </ul>
-            <div class="order-point__map">
-                <img src="./common/images/Карта.png" alt="">
+      <button class="order-point__btn-close">&#9587;</button>
+      <h1 class="order-point__title">Выбрать пункт заказа</h1>
+      <div class="order-point__container">
+        <ul class="order-point__list">
+          <li class="order-point__item">
+            <span class="order-point__text">Россия, обл. Московская, р-н Мытищинский,
+              г. Марфино, Зеленая, 2а5</span>
+            <span class="order-point__text order__text--bold order-point__text--green">Доступно для самовывоза с 4
+              декабря</span>
+            <p class="order-point__time">
+              <span class="order-point__text order__text--bold">Режим работы</span>
+              <span class="order-point__text">Пн-Пт 10:00-20:00, сб-вс 10:00-18:00</span>
+            </p>
+            <div class="order-point__btn-block">
+              <button class="main-btn order-point__btn-submit">ВЫБРАТЬ</button>
+              <button class="order-point__btn-show-hide">Подробнее</button>
             </div>
+          </li>
+          <li class="order-point__item">
+            <span class="order-point__text">Россия, обл. Московская, р-н Мытищинский,
+              г. Марфино, Зеленая, 2а5</span>
+            <span class="order-point__text order__text--bold order-point__text--green">Доступно для самовывоза с 4
+              декабря</span>
+            <p class="order-point__time">
+              <span class="order-point__text order__text--bold">Режим работы</span>
+              <span class="order-point__text">Пн-Пт 10:00-20:00, сб-вс 10:00-18:00</span>
+            </p>
+            <div class="order-point__btn-block">
+              <button class="main-btn order-point__btn-submit">ВЫБРАТЬ</button>
+              <button class="order-point__btn-show-hide">Подробнее</button>
+            </div>
+          </li>
+          <li class="order-point__item">
+            <span class="order-point__text">Россия, обл. Московская, р-н Мытищинский,
+              г. Марфино, Зеленая, 2а5</span>
+            <span class="order-point__text order__text--bold order-point__text--green">Доступно для самовывоза с 4
+              декабря</span>
+            <p class="order-point__time">
+              <span class="order-point__text order__text--bold">Режим работы</span>
+              <span class="order-point__text">Пн-Пт 10:00-20:00, сб-вс 10:00-18:00</span>
+            </p>
+            <div class="order-point__btn-block">
+              <button class="main-btn order-point__btn-submit">ВЫБРАТЬ</button>
+              <button class="order-point__btn-show-hide">Подробнее</button>
+            </div>
+          </li>
+          <li class="order-point__item">
+            <span class="order-point__text">Россия, обл. Московская, р-н Мытищинский,
+              г. Марфино, Зеленая, 2а5</span>
+            <span class="order-point__text order__text--bold order-point__text--green">Доступно для самовывоза с 4
+              декабря</span>
+            <p class="order-point__time">
+              <span class="order-point__text order__text--bold">Режим работы</span>
+              <span class="order-point__text">Пн-Пт 10:00-20:00, сб-вс 10:00-18:00</span>
+            </p>
+            <div class="order-point__btn-block">
+              <button class="main-btn order-point__btn-submit">ВЫБРАТЬ</button>
+              <button class="order-point__btn-show-hide">Подробнее</button>
+            </div>
+          </li>
+        </ul>
+        <div class="order-point__map">
+          <img src="./common/images/Карта.png" alt="">
         </div>
+      </div>
     </div>
   </div>
   <div class="wrapper">
@@ -451,33 +456,36 @@
           <span class="card__nav-slash order__nav-slash">/</span>
           <a href="" class="card__nav-link order__nav-link">Оформление заказа</a>
         </nav>
-          <h1 class="order__title">Заказ оформлен</h1>
-          <div class="order__line"></div>
-          <div class="order__content">
-            <div class="order__content--left">
-                <h2 class="order__subtitle">Спасибо за заказ!</h2>
-                <p class="order__text">Ваш заказ на сумму <span class="order__text--bold">209 970 &#8381;</span> успешно оформлен</p>
-                <div class="order__line--green"></div>
-                <div class="order__number">
-                <p class="order__text">Номер вашего заказа - <span class="order__text--bold">AF22BND2</span></p> <img src="./common/svg/Cart-green.svg" alt="">
-                </div>
-                <div class="order__line--green"></div>
-                 <p class="order__text">Вы можете отслеживать ход выполнения в <a class="order__link" href="./user-account.html">Личном кабинете</a></p>
-                </div>
-            <div class="order__content--right">
-                <div class="order__text-block">
-                    <p class="order__text order__text--bold">Что делать дальше?</p>
-                    <p class="order__text">
-                        Ваш заказ передан в службу обработки заказов. Ожидайте СМС-уведомление
-                        на номер, указанный при оформлении заказа и письма на Ваш адрес
-                        электронной почты о состоянии выполнения заказа.
-                    </p>
-                </div>
-                <p class="order__text">По всем вопросам Вы можете обратиться в службу
-                    поддержки: <span class="order__text--bold">8 (800) 200-22-22</span>
-                </p>
+        <h1 class="order__title">Заказ оформлен</h1>
+        <div class="order__line"></div>
+        <div class="order__content">
+          <div class="order__content--left">
+            <h2 class="order__subtitle">Спасибо за заказ!</h2>
+            <p class="order__text">Ваш заказ на сумму <span class="order__text--bold">209 970 &#8381;</span> успешно
+              оформлен</p>
+            <div class="order__line--green"></div>
+            <div class="order__number">
+              <p class="order__text">Номер вашего заказа - <span class="order__text--bold">AF22BND2</span></p> <img
+                src="./common/svg/Cart-green.svg" alt="">
             </div>
+            <div class="order__line--green"></div>
+            <p class="order__text">Вы можете отслеживать ход выполнения в <a class="order__link"
+                href="./user-account.html">Личном кабинете</a></p>
           </div>
+          <div class="order__content--right">
+            <div class="order__text-block">
+              <p class="order__text order__text--bold">Что делать дальше?</p>
+              <p class="order__text">
+                Ваш заказ передан в службу обработки заказов. Ожидайте СМС-уведомление
+                на номер, указанный при оформлении заказа и письма на Ваш адрес
+                электронной почты о состоянии выполнения заказа.
+              </p>
+            </div>
+            <p class="order__text">По всем вопросам Вы можете обратиться в службу
+              поддержки: <span class="order__text--bold">8 (800) 200-22-22</span>
+            </p>
+          </div>
+        </div>
       </div>
     </main>
     <footer class="footer">
@@ -557,24 +565,28 @@
     </footer>
     <div class="feedback">
       <div class="feedback__container">
-      <div class="feedback__content">
-      <h1 class="feedback__title">Обратная связь</h1>
-      <form class="feedback__form" action="">
-          <label class="feedback__name" for="feedback-name">Ваше имя<input id="feedback-name" placeholder="Введите имя" type="text"></label>
-          <label class="feedback__phone" for="feedback-phone">Телефон<input id="feedback-phone" placeholder="+7(" type="tel"></label>
-          <label class="feedback__email" for="feedback-email">E-mail<input id="feedback-email" placeholder="Введите e-mail" type="email"></label>
-          <label class="feedback__text" for="feedback-text"><textarea id="feedback-text" placeholder="Текст сообщения" name="" id="" cols="30" rows="10"></textarea></label>
-          <span class="feedback__politic">Нажимая кнопку отправить, вы соглашаетесь
+        <div class="feedback__content">
+          <h1 class="feedback__title">Обратная связь</h1>
+          <form class="feedback__form" action="">
+            <label class="feedback__name" for="feedback-name">Ваше имя<input id="feedback-name"
+                placeholder="Введите имя" type="text"></label>
+            <label class="feedback__phone" for="feedback-phone">Телефон<input id="feedback-phone" placeholder="+7("
+                type="tel"></label>
+            <label class="feedback__email" for="feedback-email">E-mail<input id="feedback-email"
+                placeholder="Введите e-mail" type="email"></label>
+            <label class="feedback__text" for="feedback-text"><textarea id="feedback-text" placeholder="Текст сообщения"
+                name="" id="" cols="30" rows="10"></textarea></label>
+            <span class="feedback__politic">Нажимая кнопку отправить, вы соглашаетесь
               с политикой обработки <a class="feedback__link" href="">персональных данных</a></span>
-          <div class="feedback__captcha">
-            <img src="./common/images/Капча.png" alt="">
-          </div>
-          <button class="feedback__btn-submit main-btn">ОТПРАВИТЬ</button>
-          <button class="feedback__btn-close">&#9587;</button>
-      </form>
+            <div class="feedback__captcha">
+              <img src="./common/images/Капча.png" alt="">
+            </div>
+            <button class="feedback__btn-submit main-btn">ОТПРАВИТЬ</button>
+            <button class="feedback__btn-close">&#9587;</button>
+          </form>
+        </div>
       </div>
     </div>
-  </div>
   </div>
   <script src="https://unpkg.com/feather-icons"></script>
   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
