--- a/search-page.html
+++ b/search-page.html
@@ -216,27 +216,28 @@
       <h1 class="login-modal__title">Вход на сайт</h1>
       <label for="login-email">Логин</label>
       <div class="login-modal__email-block">
-      <input id="login-email" required type="email" placeholder="Введите почту">
-      <img src="./common/svg/Message-gray.svg" alt="">      
+        <input id="login-email" required type="email" placeholder="Введите почту">
+        <img src="./common/svg/Message-gray.svg" alt="">
       </div>
       <label for="login-pass">Пароль</label>
       <button class="login-modal__link-remind">Напомнить</button>
       <div class="login-modal__password-block">
-      <input id="login-pass" required type="password" placeholder="Введите пароль">
-      <img src="./common/svg/Eye.svg" alt="" class="show-pass">    
+        <input id="login-pass" required type="password" placeholder="Введите пароль">
+        <img src="./common/svg/Eye.svg" alt="" class="show-pass">
       </div>
       <div class="login-modal__btn-block">
-      <button class="main-btn login-modal__btn-submit" type="submit">Войти</button><a class="login-modal__link-register" href="./registration.html">Регистрация</a>
-    </div>
+        <button class="main-btn login-modal__btn-submit" type="submit">Войти</button><a
+          class="login-modal__link-register" href="./registration.html">Регистрация</a>
+      </div>
     </form>
-    
+
     <form class="remind-password__content" action="" onsubmit="return false">
       <button class="remind-password__btn-close">&#9587;</button>
       <h1 class="remind-password__title">Напомнить пароль</h1>
-      <label for="remind-pass-email" >Укажите вашу почту</label>
+      <label for="remind-pass-email">Укажите вашу почту</label>
       <div class="remind-password__email-block">
-      <input id="remind-pass-email" required type="email" placeholder="Введите почту">
-      <img src="./common/svg/Message-gray.svg" alt="">
+        <input id="remind-pass-email" required type="email" placeholder="Введите почту">
+        <img src="./common/svg/Message-gray.svg" alt="">
       </div>
       <div class="remind-password__btn-block">
         <button type="submit" class="main-btn remind-password__btn-submit">Отправить</button>
@@ -499,8 +500,10 @@
             Поиск по сайту
           </h2>
           <div class="search-page__result">
-            <span class="search-page__result-item">Вы искали: <span class="search-page__result--green">Иглы</span></span>
-            <span class="search-page__result-item">Найдено: <span class="search-page__result--green">23 товара</span></span>
+            <span class="search-page__result-item">Вы искали: <span
+                class="search-page__result--green">Иглы</span></span>
+            <span class="search-page__result-item">Найдено: <span class="search-page__result--green">23
+                товара</span></span>
           </div>
         </div>
         <div class="catalog-individual__content">
@@ -988,24 +991,28 @@
     </footer>
     <div class="feedback">
       <div class="feedback__container">
-      <div class="feedback__content">
-      <h1 class="feedback__title">Обратная связь</h1>
-      <form class="feedback__form" action="">
-          <label class="feedback__name" for="feedback-name">Ваше имя<input id="feedback-name" placeholder="Введите имя" type="text"></label>
-          <label class="feedback__phone" for="feedback-phone">Телефон<input id="feedback-phone" placeholder="+7(" type="tel"></label>
-          <label class="feedback__email" for="feedback-email">E-mail<input id="feedback-email" placeholder="Введите e-mail" type="email"></label>
-          <label class="feedback__text" for="feedback-text"><textarea id="feedback-text" placeholder="Текст сообщения" name="" id="" cols="30" rows="10"></textarea></label>
-          <span class="feedback__politic">Нажимая кнопку отправить, вы соглашаетесь
+        <div class="feedback__content">
+          <h1 class="feedback__title">Обратная связь</h1>
+          <form class="feedback__form" action="">
+            <label class="feedback__name" for="feedback-name">Ваше имя<input id="feedback-name"
+                placeholder="Введите имя" type="text"></label>
+            <label class="feedback__phone" for="feedback-phone">Телефон<input id="feedback-phone" placeholder="+7("
+                type="tel"></label>
+            <label class="feedback__email" for="feedback-email">E-mail<input id="feedback-email"
+                placeholder="Введите e-mail" type="email"></label>
+            <label class="feedback__text" for="feedback-text"><textarea id="feedback-text" placeholder="Текст сообщения"
+                name="" id="" cols="30" rows="10"></textarea></label>
+            <span class="feedback__politic">Нажимая кнопку отправить, вы соглашаетесь
               с политикой обработки <a class="feedback__link" href="">персональных данных</a></span>
-          <div class="feedback__captcha">
-            <img src="./common/images/Капча.png" alt="">
-          </div>
-          <button class="feedback__btn-submit main-btn">ОТПРАВИТЬ</button>
-          <button class="feedback__btn-close">&#9587;</button>
-      </form>
+            <div class="feedback__captcha">
+              <img src="./common/images/Капча.png" alt="">
+            </div>
+            <button class="feedback__btn-submit main-btn">ОТПРАВИТЬ</button>
+            <button class="feedback__btn-close">&#9587;</button>
+          </form>
+        </div>
       </div>
     </div>
-  </div>
   </div>
   <script src="https://unpkg.com/feather-icons"></script>
   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
