--- a/shoping_cart.html
+++ b/shoping_cart.html
@@ -217,80 +217,81 @@
     </div>
     <div class="modal-mask login-modal">
         <form class="login-modal__content" action="" onsubmit="return false">
-          <button class="login-modal__btn-close">&#9587;</button>
-          <h1 class="login-modal__title">Вход на сайт</h1>
-          <label for="login-email">Логин</label>
-          <div class="login-modal__email-block">
-          <input id="login-email" required type="email" placeholder="Введите почту">
-          <img src="./common/svg/Message-gray.svg" alt="">      
-          </div>
-          <label for="login-pass">Пароль</label>
-          <button class="login-modal__link-remind">Напомнить</button>
-          <div class="login-modal__password-block">
-          <input id="login-pass" required type="password" placeholder="Введите пароль">
-          <img src="./common/svg/Eye.svg" alt="" class="show-pass">    
-          </div>
-          <div class="login-modal__btn-block">
-          <button class="main-btn login-modal__btn-submit" type="submit">Войти</button><a class="login-modal__link-register" href="./registration.html">Регистрация</a>
-        </div>
+            <button class="login-modal__btn-close">&#9587;</button>
+            <h1 class="login-modal__title">Вход на сайт</h1>
+            <label for="login-email">Логин</label>
+            <div class="login-modal__email-block">
+                <input id="login-email" required type="email" placeholder="Введите почту">
+                <img src="./common/svg/Message-gray.svg" alt="">
+            </div>
+            <label for="login-pass">Пароль</label>
+            <button class="login-modal__link-remind">Напомнить</button>
+            <div class="login-modal__password-block">
+                <input id="login-pass" required type="password" placeholder="Введите пароль">
+                <img src="./common/svg/Eye.svg" alt="" class="show-pass">
+            </div>
+            <div class="login-modal__btn-block">
+                <button class="main-btn login-modal__btn-submit" type="submit">Войти</button><a
+                    class="login-modal__link-register" href="./registration.html">Регистрация</a>
+            </div>
         </form>
-        
+
         <form class="remind-password__content" action="" onsubmit="return false">
-          <button class="remind-password__btn-close">&#9587;</button>
-          <h1 class="remind-password__title">Напомнить пароль</h1>
-          <label for="remind-pass-email" >Укажите вашу почту</label>
-          <div class="remind-password__email-block">
-          <input id="remind-pass-email" required type="email" placeholder="Введите почту">
-          <img src="./common/svg/Message-gray.svg" alt="">
-          </div>
-          <div class="remind-password__btn-block">
-            <button type="submit" class="main-btn remind-password__btn-submit">Отправить</button>
-            <button class="remind-password__link-back">Назад</button>
-          </div>
+            <button class="remind-password__btn-close">&#9587;</button>
+            <h1 class="remind-password__title">Напомнить пароль</h1>
+            <label for="remind-pass-email">Укажите вашу почту</label>
+            <div class="remind-password__email-block">
+                <input id="remind-pass-email" required type="email" placeholder="Введите почту">
+                <img src="./common/svg/Message-gray.svg" alt="">
+            </div>
+            <div class="remind-password__btn-block">
+                <button type="submit" class="main-btn remind-password__btn-submit">Отправить</button>
+                <button class="remind-password__link-back">Назад</button>
+            </div>
         </form>
-    
+
         <div class="remind-password__content remind-password__content-finish">
-          <button class="remind-password__btn-close">&#9587;</button>
-          <h1 class="remind-password__title">Напомнить пароль</h1>
-          <p class="remind-password__text">
-            На вашу почту отправлен e-mail,
-            с дальнейшими инстуркциями
-            по восстановлению пароля.
-          </p>
-          <div class="remind-password__btn-block">
-            <button type="submit" class="main-btn remind-password__btn-submit">Закрыть</button>
-            <p class="remind-password__text-hide">
-              Окно закроется через <span class="remind-password__seconds">3</span> сек.
+            <button class="remind-password__btn-close">&#9587;</button>
+            <h1 class="remind-password__title">Напомнить пароль</h1>
+            <p class="remind-password__text">
+                На вашу почту отправлен e-mail,
+                с дальнейшими инстуркциями
+                по восстановлению пароля.
             </p>
-          </div>
+            <div class="remind-password__btn-block">
+                <button type="submit" class="main-btn remind-password__btn-submit">Закрыть</button>
+                <p class="remind-password__text-hide">
+                    Окно закроется через <span class="remind-password__seconds">3</span> сек.
+                </p>
+            </div>
         </div>
         <div class="city__content">
             <button class="city__btn-close">&#9587;</button>
             <div class="city__header">
-              <h1 class="city__title">Выбрать город</h1>
-              <button class="city__auto">Определить автоматически</button>
+                <h1 class="city__title">Выбрать город</h1>
+                <button class="city__auto">Определить автоматически</button>
             </div>
             <div class="city__search-block">
-              <img src="./common/svg/Search.svg" alt="">
-              <input class="city__search" type="search" name="" id="" placeholder="Найти город">
+                <img src="./common/svg/Search.svg" alt="">
+                <input class="city__search" type="search" name="" id="" placeholder="Найти город">
             </div>
             <ul class="city__list">
-              <li class="city__item">
-                Москва
-                <img src="./common/svg/Checbox.svg" alt="">
-              </li>
-              <li class="city__item">Екатеринбург</li>
-              <li class="city__item">Краснодар</li>
-              <li class="city__item">Нижний Ровгород</li>
-              <li class="city__item">Новосибирск</li>
-              <li class="city__item">Ростов-на-Дону</li>
-              <li class="city__item">Самара</li>
-              <li class="city__item">Санкт-Петербург</li>
-              <li class="city__item">Уфа</li>
-              <li class="city__item">Челябинск</li>
+                <li class="city__item">
+                    Москва
+                    <img src="./common/svg/Checbox.svg" alt="">
+                </li>
+                <li class="city__item">Екатеринбург</li>
+                <li class="city__item">Краснодар</li>
+                <li class="city__item">Нижний Ровгород</li>
+                <li class="city__item">Новосибирск</li>
+                <li class="city__item">Ростов-на-Дону</li>
+                <li class="city__item">Самара</li>
+                <li class="city__item">Санкт-Петербург</li>
+                <li class="city__item">Уфа</li>
+                <li class="city__item">Челябинск</li>
             </ul>
-          </div>
-      </div>
+        </div>
+    </div>
     <div class="wrapper">
         <header class="header">
             <div class="container">
