--- a/user-account.html
+++ b/user-account.html
@@ -271,22 +271,59 @@
             </div>
             <div class="city__search-block">
               <img src="./common/svg/Search.svg" alt="">
-              <input class="city__search" type="search" name="" id="" placeholder="Найти город">
+              <input class="city__search" type="search" name="city" id="" placeholder="Найти город">
             </div>
             <ul class="city__list">
               <li class="city__item">
-                Москва
+                <label for="Москва">Москва</label>
+                <input type="radio" checked name="city" id="Москва">
                 <img src="./common/svg/Checbox.svg" alt="">
               </li>
-              <li class="city__item">Екатеринбург</li>
-              <li class="city__item">Краснодар</li>
-              <li class="city__item">Нижний Ровгород</li>
-              <li class="city__item">Новосибирск</li>
-              <li class="city__item">Ростов-на-Дону</li>
-              <li class="city__item">Самара</li>
-              <li class="city__item">Санкт-Петербург</li>
-              <li class="city__item">Уфа</li>
-              <li class="city__item">Челябинск</li>
+              <li class="city__item">
+                <label for="Екатеринбург">Екатеринбург</label>
+                <input type="radio" name="city" id="Екатеринбург">
+                <img src="./common/svg/Checbox.svg" alt="">
+              </li>
+              <li class="city__item">
+                <label for="Краснодар">Краснодар</label>
+                <input type="radio" name="city" id="Краснодар">
+                <img src="./common/svg/Checbox.svg" alt="">
+              </li>
+              <li class="city__item">
+                <label for="Нижний Новгород">Нижний Новгород</label>
+                <input type="radio" name="city" id="Нижний Новгород">
+                <img src="./common/svg/Checbox.svg" alt="">
+              </li>
+              <li class="city__item">
+                <label for="Новосибирск">Новосибирск</label>
+                <input type="radio" name="city" id="Новосибирск">
+                <img src="./common/svg/Checbox.svg" alt="">
+              </li>
+              <li class="city__item">
+                <label for="Ростов-на-Дону">Ростов-на-Дону</label>
+                <input type="radio" name="city" id="Ростов-на-Дону">
+                <img src="./common/svg/Checbox.svg" alt="">
+              </li>
+              <li class="city__item">
+                <label for="Самара">Самара</label>
+                <input type="radio" name="city" id="Самара">
+                <img src="./common/svg/Checbox.svg" alt="">
+              </li>
+              <li class="city__item">
+                <label for="Санкт-Петербург">Санкт-Петербург</label>
+                <input type="radio" name="city" id="Санкт-Петербург">
+                <img src="./common/svg/Checbox.svg" alt="">
+              </li>
+              <li class="city__item">
+                <label for="Уфа">Уфа</label>
+                <input type="radio" name="city" id="Уфа">
+                <img src="./common/svg/Checbox.svg" alt="">
+              </li>
+              <li class="city__item">
+                <label for="Челябинск">Челябинск</label>
+                <input type="radio" name="city" id="Челябинск">
+                <img src="./common/svg/Checbox.svg" alt="">
+              </li>
             </ul>
           </div>
       </div>
