add: modal result search

--- a/order.html
+++ b/order.html
@@ -410,6 +410,58 @@
           <div class="search header__search">
             <i id="icon" class="search__icon" data-feather="search"></i>
             <input type="search" placeholder="Введите товар для поиска" class="search__input" />
+            <div class="search-result">
+              <ul class="search-result__list">
+                <li class="search-result__item">
+                  <img src="./common/cards-img/card-prod-slider.png" alt="" width="30" height="30"
+                    class="search-result__img">
+                  <div class="search-result__description">
+                    <a href="./card-products.html" class="search-result__link">Название товара на сайте</a>
+                    <span class="search-result__price favorite-product__price favorite-product__price--sale">9.500
+                      &#8381
+                      <span class="favorite-product__price--former-price">10 430 &#8381</span>
+                    </span>
+                  </div>
+                </li>
+                <li class="search-result__item">
+                  <img src="./common/cards-img/card-prod-slider.png" alt="" width="30" height="30"
+                    class="search-result__img">
+                  <div class="search-result__description">
+                    <a href="./card-products.html" class="search-result__link">Название товара на сайте</a>
+                    <span class="search-result__price favorite-product__price">9.500 &#8381
+                    </span>
+                  </div>
+                </li>
+                <li class="search-result__item">
+                  <img src="./common/cards-img/card-prod-slider.png" alt="" width="30" height="30"
+                    class="search-result__img">
+                  <div class="search-result__description">
+                    <a href="./card-products.html" class="search-result__link">Название товара на сайте</a>
+                    <span class="search-result__price favorite-product__price">9.500 &#8381
+                    </span>
+                  </div>
+                </li>
+                <li class="search-result__item">
+                  <img src="./common/cards-img/card-prod-slider.png" alt="" width="30" height="30"
+                    class="search-result__img">
+                  <div class="search-result__description">
+                    <a href="./card-products.html" class="search-result__link">Название товара на сайте</a>
+                    <span class="search-result__price favorite-product__price">9.500 &#8381
+                    </span>
+                  </div>
+                </li>
+                <li class="search-result__item">
+                  <img src="./common/cards-img/card-prod-slider.png" alt="" width="30" height="30"
+                    class="search-result__img">
+                  <div class="search-result__description">
+                    <a href="./card-products.html" class="search-result__link">Название товара на сайте</a>
+                    <span class="search-result__price favorite-product__price">9.500 &#8381
+                    </span>
+                  </div>
+                </li>
+              </ul>
+              <a href="./search-page.html" class="main-btn search-result__btn" type="button">ПОКАЗАТЬ ВСЕ (36)</a>
+            </div>
           </div>
           <address class="tel header__tel">
             <a href="tel:8 800 245 56 56" class="tel__num">8 800 245 56 56</a>
