--- a/directions-page.html
+++ b/directions-page.html
@@ -401,7 +401,7 @@
           </address>
           <div class="header__icons-buttons">
             <button type="button" class="icon-btn header__seacrh-btn">
-              <a href="./search-page.html">
+              <a href="#">
                 <img src="./common/svg/Search.svg" alt="">
               </a>
             </button>
