--- a/search-empty.html
+++ b/search-empty.html
@@ -396,7 +396,8 @@
               <a href="./search-page.html" class="main-btn search-result__btn" type="button">ПОКАЗАТЬ ВСЕ (36)</a>
             </div>
           </div>
-          <address class="tel header__tel">
+          <button class="search-result__btn-cancel" type="button">Отменить</button>
+<address class="tel header__tel">
             <a href="tel:8 800 245 56 56" class="tel__num">8 800 245 56 56</a>
           </address>
           <div class="header__icons-buttons">
