fix: style chevron

--- a/catalog-main.html
+++ b/catalog-main.html
@@ -136,7 +136,7 @@
                                 class="accordion card__accordion ">
                                 Каталог продукции
                                 <button style="background-color:rgb(240, 241, 245);" class="accordion__icon">
-                                    <span id="1" class="chevron"></span>
+                                    <span id="1" class="aside-chevrone">❯</span>
                                 </button>
                             </div>
                             <div id="1" class="panel">
@@ -159,7 +159,7 @@
                                 class="accordion card__accordion">
                                 Направления
                                 <button style="background-color:rgb(240, 241, 245);" class="accordion__icon">
-                                    <span id="2" class="chevron"></span>
+                                    <span id="2" class="aside-chevrone">❯</span>
                                 </button>
                             </div>
                             <div id="2" class="panel">
@@ -181,7 +181,7 @@
                                 class="accordion card__accordion">
                                 Информация
                                 <button style="background-color:rgb(240, 241, 245);" class="accordion__icon">
-                                    <span id="3" class="chevron"></span>
+                                    <span id="3" class="aside-chevrone">❯</span>
                                 </button>
                             </div>
                             <div id="3" class="panel">
@@ -495,7 +495,7 @@
                             Биопсия
                         </a>
                         <button class="accordion__icon">
-                            <span class="chevron"></span>
+                            <span class="aside-chevrone">❯</span>
                         </button>
                     </div>
                     <div id="1" class="panel">
@@ -532,7 +532,7 @@
                             Урология
                         </a>
                         <button class="accordion__icon">
-                            <span id="2" class="chevron"></span>
+                            <span id="2" class="aside-chevrone">❯</span>
                         </button>
                     </div>
                     <div id="2" class="panel">
@@ -569,7 +569,7 @@
                             Маммология
                         </a>
                         <button class="accordion__icon">
-                            <span id="3" class="chevron"></span>
+                            <span id="3" class="aside-chevrone">❯</span>
                         </button>
                     </div>
                     <div id="3" class="panel">
@@ -606,7 +606,7 @@
                             Сетчатые импланты
                         </a>
                         <button class="accordion__icon">
-                            <span id="4" class="chevron"></span>
+                            <span id="4" class="aside-chevrone">❯</span>
                         </button>
                     </div>
                     <div id="4" class="panel">
@@ -643,7 +643,7 @@
                             Шовный материал
                         </a>
                         <button class="accordion__icon">
-                            <span id="5" class="chevron"></span>
+                            <span id="5" class="aside-chevrone">❯</span>
                         </button>
                     </div>
                     <div id="5" class="panel">
@@ -680,7 +680,7 @@
                             Гемостатические средства
                         </a>
                         <button class="accordion__icon">
-                            <span id="6" class="chevron"></span>
+                            <span id="6" class="aside-chevrone">❯</span>
                         </button>
                     </div>
                     <div id="6" class="panel">
@@ -717,7 +717,7 @@
                             Центральный венозный доступ
                         </a>
                         <button class="accordion__icon">
-                            <span id="7" class="chevron"></span>
+                            <span id="7" class="aside-chevrone">❯</span>
                         </button>
                     </div>
                     <div id="7" class="panel">
@@ -754,7 +754,7 @@
                             Переферический венозный доступ
                         </a>
                         <button class="accordion__icon">
-                            <span id="8" class="chevron"></span>
+                            <span id="8" class="aside-chevrone">❯</span>
                         </button>
                     </div>
                     <div id="8" class="panel">
