--- a/shoping_cart.html
+++ b/shoping_cart.html
@@ -137,7 +137,7 @@
                                 class="accordion card__accordion ">
                                 Каталог продукции
                                 <button style="background-color:rgb(240, 241, 245);" class="accordion__icon">
-                                    <span class="chevron"></span>
+                                    <span class="aside-chevrone">❯</span>
                                 </button>
                             </div>
                             <div class="panel">
@@ -160,7 +160,7 @@
                                 class="accordion card__accordion">
                                 Направления
                                 <button style="background-color:rgb(240, 241, 245);" class="accordion__icon">
-                                    <span class="chevron"></span>
+                                    <span class="aside-chevrone">❯</span>
                                 </button>
                             </div>
                             <div class="panel">
@@ -182,7 +182,7 @@
                                 class="accordion card__accordion">
                                 Информация
                                 <button style="background-color:rgb(240, 241, 245);" class="accordion__icon">
-                                    <span class="chevron"></span>
+                                    <span class="aside-chevrone">❯</span>
                                 </button>
                             </div>
                             <div class="panel">
