--- a/brand-inside.html
+++ b/brand-inside.html
@@ -135,7 +135,7 @@
               <div style="background-color:rgb(240, 241, 245);padding-left: 0rem;" class="accordion card__accordion ">
                 Каталог продукции
                 <button style="background-color:rgb(240, 241, 245);" class="accordion__icon">
-                  <span class="chevron"></span>
+                  <span class="aside-chevrone">❯</span>
                 </button>
               </div>
               <div class="panel">
@@ -157,7 +157,7 @@
               <div style="background-color:rgb(240, 241, 245);padding-left: 0rem;" class="accordion card__accordion">
                 Направления
                 <button style="background-color:rgb(240, 241, 245);" class="accordion__icon">
-                  <span class="chevron"></span>
+                  <span class="aside-chevrone">❯</span>
                 </button>
               </div>
               <div class="panel">
@@ -178,7 +178,7 @@
               <div style="background-color:rgb(240, 241, 245);padding-left: 0rem;" class="accordion card__accordion">
                 Информация
                 <button style="background-color:rgb(240, 241, 245);" class="accordion__icon">
-                  <span class="chevron"></span>
+                  <span class="aside-chevrone">❯</span>
                 </button>
               </div>
               <div class="panel">
