--- a/user-account.html
+++ b/user-account.html
@@ -136,7 +136,7 @@
                                 class="accordion card__accordion ">
                                 Каталог продукции
                                 <button style="background-color:rgb(240, 241, 245);" class="accordion__icon">
-                                    <span class="chevron"></span>
+                                    <span class="aside-chevrone">❯</span>
                                 </button>
                             </div>
                             <div class="panel">
@@ -159,7 +159,7 @@
                                 class="accordion card__accordion">
                                 Направления
                                 <button style="background-color:rgb(240, 241, 245);" class="accordion__icon">
-                                    <span class="chevron"></span>
+                                    <span class="aside-chevrone">❯</span>
                                 </button>
                             </div>
                             <div class="panel">
@@ -181,7 +181,7 @@
                                 class="accordion card__accordion">
                                 Информация
                                 <button style="background-color:rgb(240, 241, 245);" class="accordion__icon">
-                                    <span class="chevron"></span>
+                                    <span class="aside-chevrone">❯</span>
                                 </button>
                             </div>
                             <div class="panel">
