fix:  slider banner pagination

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                     <i id="icon" stroke="#fff" data-feather="arrow-right"></i>
                   </button>
                   <div class="banner__line"></div>
-                  <img src="./common/svg/1_4.svg" alt="1/4" class="banner__num-icon" />
+                  <p class="swiper-pagination-custom"></p>
                 </div>
               </div>
               <div class="banner__brand-image">
@@ -518,7 +518,6 @@
                     <i id="icon" stroke="#fff" data-feather="arrow-right"></i>
                   </button>
                   <div class="banner__line"></div>
-                  <img src="./common/svg/1_4.svg" alt="1/4" class="banner__num-icon" />
                 </div>
               </div>
               <div class="banner__brand-image">
@@ -542,7 +541,6 @@
                     <i id="icon" stroke="#fff" data-feather="arrow-right"></i>
                   </button>
                   <div class="banner__line"></div>
-                  <img src="./common/svg/1_4.svg" alt="1/4" class="banner__num-icon" />
                 </div>
               </div>
               <div class="banner__brand-image">
@@ -566,7 +564,6 @@
                     <i id="icon" stroke="#fff" data-feather="arrow-right"></i>
                   </button>
                   <div class="banner__line"></div>
-                  <img src="./common/svg/1_4.svg" alt="1/4" class="banner__num-icon" />
                 </div>
               </div>
               <div class="banner__brand-image">
